# mosaic

./: .gitignore  .ignore  AI_FLOW.md  INTERACTIONS.md  README.md  SYSTEM_DOCUMENTATION.md
backend/: .env.example  .gitignore  .spotify_token_cache  config.py  data.py  main.py  prompts.py  pyproject.toml  test_spotify.py  test_strava.py  tool_generator.py  utils.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/integrations/: __init__.py  clashroyale.py  sports.py  spotify.py  stocks.py  strava.py
backend/integrations/sports/: __init__.py  client.py
backend/integrations/spotify/: __init__.py  client.py
backend/integrations/stocks/: __init__.py  client.py
backend/integrations/strava/: __init__.py  client.py
backend/tests/: test_clashroyale.py  test_prompts.py  test_sports_api.py  test_sports_espn.py  test_spotify.py  test_strava.py  test_utils.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/__tests__/: stream-store.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/home/: page.tsx
frontend/app/home_legacy/: page.tsx
frontend/app/test-hybrid/: page.tsx
frontend/app/test-hybrid-themed/: page.tsx
frontend/components/: DebugWindow.tsx  DraggableWindow.tsx  HybridRenderer.tsx  ThemeProvider.tsx  ThinkingWidget.tsx  registry.ts  types.ts  utils.ts
frontend/components/adapters/: CalendarAdapter.tsx  (+8 more)
frontend/lib/: themes.ts
frontend/store/: useThemeStore.ts
frontend/stores/: stream.ts
(+17 files in other folders)
